2004-08-08  Junichi Uekawa  <dancer@debian.org>

	* pbuildd/buildd.sh: Applied patch from Roland Stigge.
	263987 264182 264182
	buildd.sh assumes to be in ${BASEDIRECTORY}
	buildd.sh shouldn't try to build packages for wrong architectures
	support DEPWAIT

2004-07-29  Junichi Uekawa  <dancer@debian.org>

	* debian/pbuilder-uml.files: add pbuilder-uml-checkparams

	* Makefile: add pbuilder-uml-checkparams

	* pdebuild-user-mode-linux.1: update manual to reflect
	  current reality of pdebuild-user-mode-linux. It was originally just a
	  copy of pdebuild manpage.

	* pbuilder-checkparams: shift around debootstrapopts parameter
	  processing out of pdebuild options; it doesn't belong there.

	* pdebuild-user-mode-linux: Call pbuilder-uml-checkparams to 
	  parse commands in UML way, not pbuilder way.
	* pbuilder-uml-checkparams: Move command-line parser to here
	* pbuilder-user-mode-linux: Move command-line parser out

2004-07-24  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux.1: document dumpconfig.

	* pbuilder.8: document dumpconfig

	* pbuilder-modules: add note to dumpconfig in help.

	* pbuilder: add dumpconfig option.

	* pbuilder-user-mode-linux: pass --debug option to pbuilder when
	--uml-debugmode is available.
	add "dumpconfig" operation.

2004-07-21  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test-uml.sh: try to update. Still does not work.

	* testsuite/rootstrap.conf: try to update

	* pbuilder-uml.conf.5: update doc to note that ~/.pbuilderrc shoulnd't have APTCACHEHARDLINK=yes if using user-mode-linux

	* pbuilder-uml.conf (APTCACHEHARDLINK): set default value of APTCACHEHARDLINK to no.

2004-07-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: 259325: call /sbin/halt -d -f 
	instead of just doing an exit from UML.
	init=/bin/sh, and this is required for safe exit now, apparently.

2004-07-14  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update notes on D10tmp script.
