@@ -1,0 +1,8 @@
+This directory contains examples for running pbuilder on 
+multiple hosts.
+
+This is the configuration used in 'compiler' system.
+
+
+build-agent.sh  -- the agent on the master side
+remote-buildd.sh -- the buildd
