@@ -1,3 +1,9 @@
+2004-08-12  Junichi Uekawa  <dancer@debian.org>
+
+	* pbuildd/remote-buildd.sh: files from 'compiler' distributed pbuilder setup
+	* pbuildd/build-agent.sh: files from 'compiler'
+	* pbuildd/README: Added
+
 2004-08-08  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuildd/buildd.sh: Applied patch from Roland Stigge.
